Fix many video issues
* spinner now is hidden by default because of z-index
* spinner still hides programmatically, too
* video is visible on a show/hide basis, not removeing and adding
* since video is persisted, new functions are called on the mounted
instance of the video to play and pause
* new play and pause allows video to pick up where it left off on
re-activate

--- a/src/components/Preview.css
+++ b/src/components/Preview.css
@@ -4,9 +4,23 @@
 }
 
 .reactTemplateBrowser-Preview-image {
-
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -2;
 }
 
 .reactTemplateBrowser-Preview-video {
+  position: relative;
+  z-index: 0;
+}
 
+.reactTemplateBrowser-Preview > .reactTemplateBrowser-LoadingSpinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  z-index: -1;
 }
